fixed breaking on mobile (vh)

--- a/src/style/Home/Home.scss
+++ b/src/style/Home/Home.scss
@@ -243,7 +243,7 @@
 
           @include breakpoint(xxs, xs, s) {
             width: 70%;
-            height: 65vh;
+            // height: 65vh;
             margin: 5% auto;
           }
 
